fixed holdingsExist issue and movers alignment

--- a/client/scss/partials/_dashboard.scss
+++ b/client/scss/partials/_dashboard.scss
@@ -26,6 +26,9 @@
     width: 8rem;
     ul {
       margin-top: 0.5rem;
+      li {
+        @include clearfix();
+      }
     }
     .label {
       float: left;
